--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,88 @@
 .App {
+  background-color: #eb8282;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+ max-width: 800px;
+ margin: 0px auto;
+ padding: 20px;
+ display: block;
+ color: rgb(195, 201, 183);
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+.App h1{
+  color: #074624;
+}
+h2{
+  color: #03452c;
+}
+label {
+  text-align: center;
+  font-size: 40px;
+  color: rgb(126, 74, 74);
+  padding: 5px;
+  font-weight: bolder;
+}
+textarea{
+  margin:1px  auto;
+  text-align: start;
+    cursor: text;
+    padding: 4px 6px;
+    border-width: 6px;
+    border-style: inset;
+    border-color:rgb(33, 31, 4);
+    background-color: rgb(85, 12, 21);
+    width: 350px;
+}
+input{
+  margin:3px  auto;
+  text-align: start;
+  background-color: rgb(85, 12, 21);
+  border-color:rgb(33, 31, 4);
+    cursor: text;
+    padding: 4px 6px;
+    border-width: 6px;
+    border-style: inset;
+    
+    width: 350px;
+    height: 150px;
+}
+.sub label , .sub input,.sub button {
+  display: block;
+  align-items: center;
+}
+ button{
+background-color: rgb(98, 13, 13);
+padding: 6px; 
+margin: 0px 8px 20px 200px ;
+color: rgb(151, 231, 184);
+border-radius: 8px;
+  border: 3px solid #070700;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+/* item */
+.item {
+  text-decoration: none;
+  display: block;
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 6px solid #282323;
+  background-color: rgb(52, 7, 12);
 }
+
+.item button{
+  padding: 5px;
+  margin: auto;
+  text-align: center;
+  background-color: rgb(8, 72, 60);
+  color: rgb(151, 231, 184);
+  font-weight: bold;
+  margin-left: 10px ;
+  border-radius: 8px;
+  border: 3px solid #070700;
+}
+.item button:hover{
+  background-color: rgb(1, 18, 18);
+}
+
+
+ 
